--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="img/logo.png" alt="">
+    <img src="mirrorfashion/img/logo.png" alt="">
     <h1>A Mirror Fashion</h1>
 </body>
 </html>
