--- a/sobre.html
+++ b/sobre.html
@@ -9,25 +9,27 @@
 </head>
 
 <body>
-    <img src="mirrorfashion/img/logo.png" alt="">
+    <img src="mirrorfashion/img/logo.png" alt="" id="logon">
     <div class="fundo">
         <h1>A Mirror Fashion</h1>
     </div>
-    <h1>Olá, mundo sou o index.html!</h1>
+    <a href="index.html">nossa loja</a>
+    <a href="#historia">História</a>
+    <a href="#diferenciais">Diferenciais</a>
     <p><strong>Mirror Fashion</strong> é a maior empresa comércio eletrônico no segmento de moda em todo o mundo.
         Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de
         participação em 118 deles.</p>
     <p>Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que
         distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
     <div class="fundo1">
-        <figure>
+        <figure id="centro-distribuicao">
             <img src="mirrorfashion/img/centro-distribuicao.png" alt="Foto do centro de distribuição">
             <figcaption>Centro de distribuição da Mirror Fashion</figcaption>
         </figure>
     </div>
     <p>Compre suas roupas e acessórios na Mirror Fashion. Acesse nossa loja ou entre em contato
         se tiver dúvidas. Conheça também nossa história e nossos diferenciais.</p>
-    <h2>História</h2>
+    <h2 id="historia">História</h2>
     <div class="fundo2" id="familia-pelho">
         <figure>
             <img src="mirrorfashion/img/familia-pelho.jpg" alt="Foto da famílha Pelho">
@@ -50,7 +52,7 @@
     <p>Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios,
         homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror
         Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
-    <h2>Diferenciais</h2>
+    <h2 id="diferenciais">Diferenciais</h2>
     <li>Menor preço do varejo, garantido</li>
     <li>Se você achar uma loja mais barata, leva o produto de graça</li>
     <li>Pague em reais, dólares, euros ou bitcoins</li>
@@ -62,7 +64,7 @@
     <div class="compre">
         <p><strong>COMPRE JÁ EM NOSSA LOJA!</strong></p>
     </div>
-    <div class="final">
+    <div class="final" id="rodape">
         <img src="mirrorfashion/img/logo.png" alt="">
         <p>© Copyright Mirror Fashion</p>
     </div>
