--- a/index.html
+++ b/index.html
@@ -20,10 +20,53 @@
                 <li><a href="">Listas de Desejos</a></li>
                 <li><a href="">Cartão Fidelidade</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
-                <li><a href=""></a>Ajuda</li>
+                <li>
+                    <a href=""></a>Ajuda</li>
             </ul>
         </nav>
     </header>
+    <div class="container destaque">
+        <section class="busca">
+            <h2>Busca</h2>
+            <form>
+                <input type="search">
+                <button>Buscar</button>
+            </form>
+        </section>
+
+        <section class="menu-departamentos">
+            <h2>Departamentos</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">Blusas e Camisas</a></li>
+                    <li><a href="#">Calças</a></li>
+                    <li><a href="#">Saias</a></li>
+                    <li><a href="#">Vestidos</a></li>
+                    <li><a href="#">Sapatos</a></li>
+                    <li><a href="#">Bolsas e Carteiras</a></li>
+                    <li><a href="#">Acessórios</a></li>
+                </ul>
+            </nav>
+        </section>
+        <section class="banner-destaque">
+            <figure>
+                <img src="mirrorfashion/img/destaque-home.png" alt="Promoção: Big City Night">
+            </figure>
+        </section>
+    </div>
+    <div class="container paineis">
+        <section class="painel novidades">
+            <h2>Novidades</h2>
+            <ol></ol>
+            <li>
+                <a href="produto.html">
+                    <figure>
+                        <img src="mirrorfashion/img/produtos/miniatura1.png" alt="Miniatura1">
+                    </figure>
+                </a>
+            </li>
+        </section>
+    </div>
     <div id="main">
 
     </div>
