--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="mirrorfashion/css/reset.css" />
   <link rel="stylesheet" href="mirrorfashion/css/style2.css" />
+  <meta name="viewport" content="width=device-width">
   <title>Document</title>
 </head>
 
@@ -38,12 +39,12 @@
       <nav>
         <ul>
           <li><a href="#">Blusas e Camisas</a>
-          <ul>
-            <li><a href="#">Manga Curta</a></li>
-            <li><a href="#">Manga Comprida</a></li>
-            <li><a href="#">Camisa Social</a></li>
-            <li><a href="#">Camisa Casual</a></li>
-          </ul>
+            <ul>
+              <li><a href="#">Manga Curta</a></li>
+              <li><a href="#">Manga Comprida</a></li>
+              <li><a href="#">Camisa Social</a></li>
+              <li><a href="#">Camisa Casual</a></li>
+            </ul>
           </li>
           <li><a href="#">Calças</a></li>
           <li><a href="#">Saias</a></li>
