--- a/checkout.html
+++ b/checkout.html
@@ -12,6 +12,29 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" fixed-top>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">Mirror Fashion</a>
+
+        <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="sobre.html"></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Ajuda</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Perguntas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Entre em contato</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Otima Escolha</h1>
@@ -23,15 +46,11 @@
 
     <div class="container">
         <div class="row">
-
             <div class="col-md-4">
-
-
                 <div class="card mb-3">
                     <div class="card-header">
                         <h2>Sua compra</h2>
                     </div>
-
 
                     <div class="card-body">
                         <img src="mirrorfashion/img/produtos/foto1-verde.png" alt="Fuzzy Cardigan"
@@ -49,7 +68,7 @@
                     </div>
                 </div>
                 <form class="col-md-8">
-                    <fieldset>
+                    <fieldset class="col-lg-6">
                         <legend>Dados Pessoais</legend>
                         <div class="form group">
                             <label for="nome">Nome Completo</label>
@@ -75,7 +94,7 @@
                             </label>
                         </div>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="col-lg-6">
                         <legend>Cartao de Credito</legend>
                         <div class="form-group">
                             <label for="numero-cartao">Numero - CVV</label>
@@ -105,6 +124,8 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="js/jquerry.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
 
 </html>
