--- a/checkout.html
+++ b/checkout.html
@@ -121,11 +121,27 @@
                         Confirmar Pedido
                     </button>
                 </form>
+                <div class="card mb-3">
+                    <div class="card-body">
+
+                        <div class="form-group">
+                            <label for="qtd">Quantidade:</label>
+                            <input type="number" id="qtd" min="1" max="99" value="1" class="form-control">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="total">Total:</label>
+                            <output id="total" class="form-control">RS 129,90</output>
+                        </div>
+                    </div>
+                    <dd id="preco">RS 129,90</dd>
+                </div>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="js/jquerry.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="jquerry.js"></script>
+    <script type="text/javascript" src="bootstrap.js"></script>
+    <script type="text/javascript" src="total.js"></script>
 </body>
 
 </html>
