--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <button>Buscar</button>
       </form>
     </section>
+    <button type="button">Mostrar mais</button>
 
     <section class="menu-departamentos">
       <h2>Departamentos</h2>
@@ -55,11 +56,13 @@
         </ul>
       </nav>
     </section>
+    <button type="button">Mostrar mais</button>
     <section class="banner-destaque">
       <figure>
         <img src="mirrorfashion/img/destaque-home.png" alt="Promoção: Big City Night" />
       </figure>
     </section>
+    <button type="button">Mostrar mais</button>
   </div>
   <div class="container paineis">
     <section class="painel novidades">
@@ -114,6 +117,7 @@
         </a>
       </li>
     </section>
+    <button type="button">Mostrar mais</button>
     <section class="painel mais-vendidos">
       <h2>Mais Vendidos</h2>
       <ol>
@@ -153,6 +157,7 @@
         </li>
       </ol>
     </section>
+    <button type="button">Mostrar Mais</button>
   </div>
   <div id="main"></div>
   <div id="destaques"></div>
@@ -166,6 +171,9 @@
       </ul>
     </div>
   </footer>
+  <script type="text/javascript" src="mirrorfashion/js/jquery.js"></script>
+  <script type="text/javascript" src="mirrorfashion/js/home.js"></script>
+  <script type="text/javascript" src="mirrorfashion/js/banner.js"></script>
 </body>
 
 </html>
