--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         <button>Buscar</button>
       </form>
     </section>
-    <button type="button">Mostrar mais</button>
 
     <section class="menu-departamentos">
       <h2>Departamentos</h2>
@@ -56,13 +55,11 @@
         </ul>
       </nav>
     </section>
-    <button type="button">Mostrar mais</button>
     <section class="banner-destaque">
       <figure>
         <img src="mirrorfashion/img/destaque-home.png" alt="Promoção: Big City Night" />
       </figure>
     </section>
-    <button type="button">Mostrar mais</button>
   </div>
   <div class="container paineis">
     <section class="painel novidades">
@@ -116,11 +113,11 @@
           </figure>
         </a>
       </li>
+      <button type="button" id="mostrarNovidades">Mostrar mais</button>
     </section>
-    <button type="button">Mostrar mais</button>
     <section class="painel mais-vendidos">
       <h2>Mais Vendidos</h2>
-      <ol>
+      <ol></ol>
         <li>
           <a href="produto.html">
             <figure>
@@ -155,9 +152,8 @@
             </figure>
           </a>
         </li>
-      </ol>
+        <button type="button" id="maisVendidos">Mostrar mais</button>   
     </section>
-    <button type="button">Mostrar Mais</button>
   </div>
   <div id="main"></div>
   <div id="destaques"></div>
