--- a/checkout.html
+++ b/checkout.html
@@ -84,7 +84,7 @@
                         <div class="form-group">
                             <label for="cpf">CPF</label>
                             <input type="text" class="form-control" name="cpf" id="cpf" placeholder="000.000.000-00"
-                                required>
+                                required data-mask="999.999.999-99">
                         </div>
 
                         <div class="form-group custom-control custom checkbox">
@@ -139,6 +139,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="inputmask-plugin.js"></script>
     <script type="text/javascript" src="jquerry.js"></script>
     <script type="text/javascript" src="bootstrap.js"></script>
     <script type="text/javascript" src="total.js"></script>
