--- a/sobre.html
+++ b/sobre.html
@@ -73,6 +73,8 @@
     do Brasil já visitaram as instalações da Mirror Fashion, além de
     presidentes da União Européia, Ásia e o secretário-geral da ONU.
   </p>
+  <iframe width="420" height="315" src="http://www.youtube.com/embed/Tb06abHE4hY" frameborder="0"
+    allowfullscreen></iframe>
   <h2 id="diferenciais">Diferenciais</h2>
   <li>Menor preço do varejo, garantido</li>
   <li>Se você achar uma loja mais barata, leva o produto de graça</li>
